# einbein

./: CMakeLists.txt  README.md  main.cpp
.kdev4/: einbein.kdev4
FPGA/: test.rbf
build-arm/: CMakeCache.txt  Makefile
build-arm/src/: einbein
build-arm/src/Test/Regelung/: Makefile  cmake_install.cmake  copy2robot.sh
build-arm/src/Test/Regelung/Base2Tool/: Fusspunkt
build-arm/src/Test/Regelung/Controller/: Controller
build-arm/src/Test/Regelung/Fusspunkt/: Fusspunkt  Makefile
build-arm/src/Test/Regelung/PDV/: PDV
build-arm/src/mpu9250/: Makefile
build-arm/test/: Makefile  dacMot  digIO  fqdMot  imu
constants/: constants.hpp
include/einbein/Regelung/Base2Tool/: CSVorKin.hpp  VorKin.hpp
include/einbein/Regelung/Fusspunkt/: CSVorKin.hpp  VorKin.hpp  constantFusspunkt.hpp
include/einbein/Regelung/Trajektorie/: Trajektorie.hpp
src/: CMakeLists.txt  main.cpp
src/Test/Regelung/: CMakeLists.txt
src/Test/Regelung/Base2Tool/: CSVorKin.cpp  VorKin.cpp
src/Test/Regelung/BaseFrame2ToolFrame/: VorKin.cpp  mainFusspunkt.cpp
src/Test/Regelung/Controller/: Controller.cpp
src/Test/Regelung/Fusspunkt/: CMakeLists.txt  CSVorKin.cpp  VorKin.cpp  mainFusspunkt.cpp
src/Test/Regelung/PDV/: PDV.cpp
src/Test/Regelung/Trajektorie/: ControlSystem.cpp  Trajektorie.cpp  main.cpp
src/mpu9250/: CMakeLists.txt
src/mpu9250/eMPL/: inv_mpu.c  inv_mpu.h  inv_mpu_dmp_motion_driver.c
src/mpu9250/mpu9250/: mpu9250.c  mpu9250.h  quaternion.c
test/: .fqdMot.cpp.kate-swp  CMakeLists.txt  DigIO.cpp  dacMot.cpp  fqdMot.cpp  imu.cpp
(+1 files in other folders)
